# my-little-ocr

./: .gitignore  LICENSE  Readme.md  __init__.py  pyproject.toml
my_little_ocr/: __init__.py
my_little_ocr/base_engine/: base_ocr_engine.py  engine_config.py
my_little_ocr/ocr_engines/: __init__.py  easyocr_engine.py  surya_engine.py
my_little_ocr/ocr_engines/rapidocr_engine/: rapidocr_engine.py
my_little_ocr/ocr_engines/tesseract_engine/: tesseract_engine.py
my_little_ocr/ocr_engines/wechat_ocr_engine/: __init__.py  wechat_ocr_engine.py
my_little_ocr/src/: base_ocr_engine.py
my_little_ocr/src/bootstrap/: __init__.py
ocr_engines/: __init__.py  base_ocr_engine.py  easyocr_engine.py  paddle_ocr_engine.py  surya_engine.py  tesseract_ocr_engine.py
ocr_engines/rapidocr_engine/: __init__.py  rapidocr_engine.py
ocr_engines/tesseract_engine/: __init__.py  install.py  tesseract_engine.py
ocr_engines/wechat_ocr/: install.py  wechat_ocr_engine.py  wechat_ocr_modified_lib.py
ocr_engines/wechat_ocr_engine/: .gitignore  __init__.py  install.py  wechat_ocr_engine.py  wechat_ocr_modified_lib.py
src/: base_ocr_engine.py  config.py  engine_config.py  img_utils.py
src/bootstrap/: setup_config.py
test/: test_ocr.py
